ThreadSanitizer: data race [@ dup] vs. [@ open] in IPC
Categories
(Core :: DOM: File, defect, P2)
Tracking
()
People
(Reporter: decoder, Assigned: Gankra)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision bc5880b621d5.
Looks like we are trying to clone a file descriptor in the IPDL Background thread while opening it at the same time in a libpulsecommon thread. Note that libpulsecommon does not have TSan instrumentation, but this report might still be accurate because TSan intercepts the respective functions (unless there is a hidden synchronization in place here).
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
| Reporter | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Depends on D94854
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•