Bug 1607706 - Remove supression for seemingly fixed issue. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D94855